--- a/package.json
+++ b/package.json
@@ -18,6 +18,11 @@
     "gulp-autoprefixer": "^7.0.0",
     "gulp-imagemin": "^6.1.0",
     "gulp-sass": "^4.0.2",
-    "gulp-sourcemaps": "^2.6.5"
+    "gulp-sourcemaps": "^2.6.5",
+    "gulp-svg-sprite": "^1.5.0",
+    "gulp.spritesmith": "^6.11.0",
+    "imagemin-svgo": "^7.0.0",
+    "merge-stream": "^2.0.0",
+    "vinyl-buffer": "^1.0.1"
   }
 }
